changed .toList() to .collect(Collectors.toList());